--- a/style.css
+++ b/style.css
@@ -47,13 +47,13 @@ textarea {
 }
 
 #el2t1 {
-  left: 1535px;
+  left: 1445px;
   top: 5px;
 }
 
 #el2t2 {
   font-size: 21px;
-  left: 1535px;
+  left: 1445px;
   top: 45px;
 }
 
@@ -70,4 +70,4 @@ textarea {
 #el5 {
   background-color: #FBCE0B;
   left: 340px;
-}t1
+}
